added Expected Outcomes

--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -686,11 +686,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Expected Outcomes:\n",
+    "\n",
+    "Our expected outcomes were to develop an algorithm to determine which of the data points (pulsar candidates) within the set are pulsar and which are non-pulsar, so that if given an unknown data point (a pulsar candidate), we would be able to accurately predict whether it would be a pulsar or not.\n",
+    "\n",
+    "Such findings will help scientists focus only on pulsar stars as they are of high interest to scientific study. Currently, it is difficult to determine whether pulsar candidates are real pulsar stars or not, so having an algorithm to predict the pulsar status would greatly improve efficiency."
+   ]
   }
  ],
  "metadata": {
