--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -682,7 +682,7 @@
     "\n",
     "We will be classifying candidates from the HTRU2 data set as either pulsars or RFI/noise based on the variables 'mean of integrated profile', 'excess kurtosis of integrated profile', and 'skewness of integrated profile'. These variables were chosen because they have the strongest correlation with the pulsar or RFI/noise classification variable (Lyon, https://www.research.manchester.ac.uk/portal/files/54588348/FULL_TEXT.PDF, page 229).\n",
     "\n",
-    "We will use the k-nearest neighbors algorithm using straight-line distance for our analysis. (note: we should decide what k to use)"
+    "We will use the k-nearest neighbors algorithm using straight-line distance for our analysis. We will visualize our findings with graphs showing the candidates classified using our algorithm"
    ]
   },
   {
@@ -715,4 +715,3 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
-
