Edited Expected Outcomes

--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -774,9 +774,13 @@
    "source": [
     "Expected Outcomes:\n",
     "\n",
-    "Our expected outcomes were to develop an algorithm to determine which of the data points (pulsar candidates) within the set are pulsar and which are non-pulsar, so that if given an unknown data point (a pulsar candidate), we would be able to accurately predict whether it would be a pulsar or not.\n",
+    "Our major goal of this project is to have developed, through a set of criteria within the variables of the data set, an algorithm to differentiate which of the data points (pulsar candidates) within the set are pulsar and which are non-pulsar, so that if given an unknown data point (a pulsar candidate), we would be able to accurately predict whether it would be a pulsar or not. We decided to focus on the variables 'mean of integrated profile', 'excess kurtosis of integrated profile', and 'skewness of integrated profile', and our expected outcome is to be able to develop an accurate algorithm based on those variables.\n",
     "\n",
-    "Such findings will help scientists focus only on pulsar stars as they are of high interest to scientific study. Currently, it is difficult to determine whether pulsar candidates are real pulsar stars or not, so having an algorithm to predict the pulsar status would greatly improve efficiency."
+    "Such findings will help scientists focus only on pulsars as they are of high interest to scientific study. Pulsars, due to their lighthouse-like behaviour, are tools to help with research regarding extreme states of matter and exoplanets. Currently, it is complicated to determine whether pulsar candidates are real pulsars or not, so having an algorithm to predict the pulsar status would greatly improve efficiency.\n",
+    "\n",
+    "If our algorithm can accurately predict the pulsar status of candidates, then we have proof of a link between the variables we chose and pulsar status. The next question that arises would be how those variables relate to one another, beyond being individually considered?\n",
+    "\n",
+    "If our algorithm cannot accurately predict the pulsar status of candicates, then further questions to consider would be what, then, is the best method for pulsar determination, and would it be possible in the first place to develop an accurate algorithm for determining such? And specifically, would it be possible to do so within the data set that we are working with?"
    ]
   }
  ],
