Changed from in-folder dataset file to online url file

--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -627,7 +627,7 @@
     }
    ],
    "source": [
-    "pulsar_data <- read_csv(\"HTRU_2.csv\", col_names = c(\"Mean of the integrated profile\", \n",
+    "pulsar_data <- read_csv(\"https://raw.githubusercontent.com/glenren/dsci_100_group_24/main/HTRU_2.csv\", col_names = c(\"Mean of the integrated profile\", \n",
     "    \"Standard deviation of the integrated profile\",\n",
     "    \"Excess kurtosis of the integrated profile\",\n",
     "    \"Skewness of the integrated profile\",\n",
