--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pulsar Classification Project Proposal\n",
+    "###### By Bernie Leung, Phillip Li, Glen Ren, and Helena Tremblay\n",
+    "\n",
+    "### Introduction\n",
+    "Pulsars are rapidly spinning, uber-dense neutron stars. These neutrons are the collapsed cores of massive supergiant stars and emit rhythmic pulses of strong radiation due to their electromagnetism dipoles. While pulsars are rotating and emitting light at regular intervals, to the observers on earth, the pulsars are twinkling.  \n",
+    "\n",
+    "For this project, we will be using the HTRU2 dataset and classifying the given candidates as pulsar or noise. The sample of pulsar candidates from the HTRU2 dataset was collected during the High Time Resolution Universe Survey, which “intends to be an all-sky survey for pulsars and short-duration radio transients, with a strong focus on the lower Galactic latitudes, [where the higher frequency resolution for the negation of interstellar dispersion are made used the most.]”\n",
+    "\n",
+    "Binary classification systems are now being widely adopted for this matter, and will be used to represent whether the pulsar is real or not. In this data set, the legitimate pulsar examples are a minority positive class, and spurious examples are the majority negative class. \n",
+    "\n",
+    "The data set shared here contains 16,259 spurious examples caused by RFI/noise, and 1,639 real pulsar examples. These examples have all been checked by human annotators.\n",
+    "\n",
+    "The data is presented in two formats: CSV and ARFF (used by the WEKA data mining tool). Candidates are stored in both files in separate rows. Each row lists the variables first, and the class label is the final entry. The class labels used are 0 (negative) and 1 (positive)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -761,18 +780,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Methods: \n",
+    "### Methods\n",
     "\n",
     "We will be classifying candidates from the HTRU2 data set as either pulsars or RFI/noise based on the variables 'mean of integrated profile', 'excess kurtosis of integrated profile', and 'skewness of integrated profile'. These variables were chosen because they have the strongest correlation with the pulsar or RFI/noise classification variable (Lyon, https://www.research.manchester.ac.uk/portal/files/54588348/FULL_TEXT.PDF, page 229).\n",
     "\n",
-    "We will use the k-nearest neighbors algorithm using straight-line distance for our analysis. We will visualize our findings with graphs showing the candidates classified using our algorithm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Expected Outcomes:\n",
+    "We will use the k-nearest neighbors algorithm using straight-line distance for our analysis. We will visualize our findings with graphs showing the candidates classified using our algorithm.\n",
+    "\n",
+    "### Expected Outcomes\n",
     "\n",
     "Our major goal of this project is to have developed, through a set of criteria within the variables of the data set, an algorithm to differentiate which of the data points (pulsar candidates) within the set are pulsar and which are non-pulsar, so that if given an unknown data point (a pulsar candidate), we would be able to accurately predict whether it would be a pulsar or not. We decided to focus on the variables 'mean of integrated profile', 'excess kurtosis of integrated profile', and 'skewness of integrated profile', and our expected outcome is to be able to develop an accurate algorithm based on those variables.\n",
     "\n",
