--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -1385,13 +1385,13 @@
     "\n",
     "### Expected Outcomes\n",
     "\n",
-    "Our major goal of this project is to have developed, through a set of criteria within the variables of the data set, a classification algorithm to differentiate whether a pulsar-candidate is truly a pulsar star or not. We decided to focus on the variables 'mean of integrated profile', 'excess kurtosis of integrated profile', and 'skewness of integrated profile', and our expected outcome is to be able to develop an accurate algorithm based on those variables.\n",
+    "Our expected outcome is to be able to develop an accurate classifier based on those variables mentioned earlier.\n",
     "\n",
-    "Such an algo will help scientists focus only on pulsars as they are of high interest to scientific study. Pulsars, due to their lighthouse-like behaviour, are tools to help with research regarding extreme states of matter and exoplanets. Currently, it is complicated to determine whether pulsar candidates are real pulsars or not, so having an algorithm to predict the pulsar status would greatly improve efficiency.\n",
+    "An accurate classifier will help scientists focus only on pulsars as they are of high interest to scientific study. Pulsars, due to their lighthouse-like behaviour, are tools to help with research regarding extreme states of matter and exoplanets. It is complicated to determine whether pulsar candidates are real pulsars or not, so having an accurate classifier would greatly improve efficiency.\n",
     "\n",
-    "If our algorithm can accurately predict the pulsar status of candidates, then we have proof of a link between the variables we chose and pulsar status. The next question that arises would be how those variables relate to one another, beyond being individually considered?\n",
+    "If our classifier works accurately, then we have proof of a link between the variables we chose and pulsar status. The next question that arises would be how those variables relate to one another, beyond being individually considered?\n",
     "\n",
-    "If our algorithm cannot accurately predict the pulsar status of candidates, then further questions to consider would be what, then, is the best method for pulsar determination, and would it be possible in the first place to develop an accurate algorithm for determining such? And specifically, would it be possible to do so within the data set that we are working with?"
+    "If our classifier doesn't work accurately, then further questions to consider would be what, then, is the best method for pulsar determination, and would it be possible at all to develop an accurate classifier? And specifically, would it be possible to do so within the data set that we are working with?"
    ]
   }
  ],
