--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -8,15 +8,13 @@
     "###### By Bernie Leung, Phillip Li, Glen Ren, and Helena Tremblay\n",
     "\n",
     "### Introduction\n",
-    "Pulsars are rapidly spinning, uber-dense neutron stars. These neutrons are the collapsed cores of massive supergiant stars and emit rhythmic pulses of strong radiation due to their electromagnetism dipoles. While pulsars are rotating and emitting light at regular intervals, to the observers on earth, the pulsars are twinkling.  \n",
+    "Pulsars are neutron stars: collapsed cores of massive supergiant stars. They emit rhythmic pulses of strong radiation due to their electromagnetism dipoles. While pulsars are rotating and emitting light at regular intervals, it looks on earth as if they're twinkling.\n",
     "\n",
-    "For this project, we will be using the HTRU2 dataset and classifying the given candidates as pulsar or noise. The sample of pulsar candidates from the HTRU2 dataset was collected during the High Time Resolution Universe Survey, which “intends to be an all-sky survey for pulsars and short-duration radio transients, with a strong focus on the lower Galactic latitudes, [where the higher frequency resolution for the negation of interstellar dispersion are made used the most.]”\n",
+    "For this project, we will be using the HTRU2 dataset, with samples of pulsar candidates collected during the High Time Resolution Universe Survey, which “intends to be an all-sky survey for pulsars and short-duration radio transients, with a strong focus on the lower Galactic latitudes, [where the higher frequency resolution for the negation of interstellar dispersion are made used the most.]”\n",
     "\n",
-    "Binary classification systems are now being widely adopted for this matter, and will be used to represent whether the pulsar is real or not. In this data set, the legitimate pulsar examples are a minority positive class, and spurious examples are the majority negative class. \n",
+    "Our project objective is to classify the pulsar candidates as either real pulsars or false candidates caused by radio frequency interference (RFI) and noise. Binary classification systems are now being widely adopted for this matter, and will be used to represent whether the pulsar is real or not. In this data set, the real pulsars are a minority positive class, and false candidates are the majority negative class.\n",
     "\n",
-    "The data set shared here contains 16,259 spurious examples caused by RFI/noise, and 1,639 real pulsar examples. These examples have all been checked by human annotators.\n",
-    "\n",
-    "The data is presented in two formats: CSV and ARFF (used by the WEKA data mining tool). Candidates are stored in both files in separate rows. Each row lists the variables first, and the class label is the final entry. The class labels used are 0 (negative) and 1 (positive)."
+    "Within the dataset, there are 16,259 false candidates and 1,639 real pulsars, all of which have been checked over by humans. The data itself is in two formats: CSV and ARFF. Each row corresponds to a candidate, each column a variable with the last column being the candidate's class. The class labels used are 0 (false candidate) and 1 (real pulsar)."
    ]
   },
   {
