--- a/Project_Proposal.ipynb
+++ b/Project_Proposal.ipynb
@@ -8,13 +8,13 @@
     "###### By Bernie Leung, Phillip Li, Glen Ren, and Helena Tremblay\n",
     "\n",
     "### Introduction\n",
-    "\"Pulsars are neutron stars: collapsed cores of massive supergiant stars. They emit rhythmic pulses of strong radiation due to their electromagnetism dipoles. While pulsars are rotating and emitting light at regular intervals, it looks on earth as if they're twinkling.\n",
+    "Pulsars are neutron stars: collapsed cores of massive supergiant stars. They emit rhythmic pulses of strong radiation due to their electromagnetism dipoles. While pulsars are rotating and emitting light at regular intervals, it looks on earth as if they're twinkling.\n",
     "\n",
     "For this project, we will be using the HTRU2 dataset, with samples of pulsar candidates collected during the High Time Resolution Universe Survey, which “intends to be an all-sky survey for pulsars and short-duration radio transients, with a strong focus on the lower Galactic latitudes, [where the higher frequency resolution for the negation of interstellar dispersion are made used the most]”(Keith, https://academic.oup.com/mnras/article/409/2/619/1037409, page 620).\n",
     "\n",
     "Our project objective is to classify the pulsar candidates as either real pulsars or false candidates caused by radio frequency interference (RFI) and noise. Binary classification systems are now being widely adopted for this matter, and will be used to represent whether the pulsar is real or not. In this data set, the real pulsars are a minority positive class, and false candidates are the majority negative class.\n",
     "\n",
-    "Within the dataset, there are 16,259 false candidates and 1,639 real pulsars, all of which have been checked over by humans. The data itself is in two formats: CSV and ARFF. Each row corresponds to a candidate, each column a variable with the last column being the candidate's class. The class labels used are 0 (false candidate) and 1 (real pulsar).\""
+    "Within the dataset, there are 16,259 false candidates and 1,639 real pulsars, all of which have been checked over by humans. The data itself is in two formats: CSV and ARFF. Each row corresponds to a candidate, each column a variable with the last column being the candidate's class. The class labels used are 0 (false candidate) and 1 (real pulsar)."
    ]
   },
   {
@@ -1377,9 +1377,9 @@
    "source": [
     "### Methods\n",
     "\n",
-    "We will be classifying candidates from the HTRU2 data set as either pulsars or RFI/noise based on the variables 'mean of integrated profile', 'excess kurtosis of integrated profile', and 'skewness of integrated profile'. These variables were chosen because they have the strongest correlation with the pulsar or RFI/noise classification variable (Lyon, https://www.research.manchester.ac.uk/portal/files/54588348/FULL_TEXT.PDF, page 229).\n",
+    "We will classify candidates from the HTRU2 dataset as either pulsars or RFI/noise based on the variables 'mean of integrated profile', 'excess kurtosis of integrated profile', and 'skewness of integrated profile'. These variables were chosen because they have the strongest correlation with the pulsar or RFI/noise classification variable (Lyon, https://www.research.manchester.ac.uk/portal/files/54588348/FULL_TEXT.PDF, page 229).\n",
     "\n",
-    "We will use the k-nearest neighbors algorithm using straight-line distance for our analysis. We will visualize our findings with graphs showing the candidates classified using our algorithm.\n",
+    "We will use the k-nearest neighbors algorithm to design or model, with the k-value being decided through a 5-fold cross-validation on our training set with 10 K values for tuning. We will visualize our findings with graphs showing the candidates classified using our algorithm.\n",
     "\n",
     "### Expected Outcomes\n",
     "\n",
