added libraries and dataset into pulsar analysis

--- a/Pulsar_Analysis.ipynb
+++ b/Pulsar_Analysis.ipynb
@@ -1,6 +1,78 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(tidyverse)\n",
+    "library(repr)\n",
+    "library(readxl)\n",
+    "library(tidymodels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  `Mean of the integrated profile` = \u001b[32mcol_double()\u001b[39m,\n",
+      "  `Standard deviation of the integrated profile` = \u001b[32mcol_double()\u001b[39m,\n",
+      "  `Excess kurtosis of the integrated profile` = \u001b[32mcol_double()\u001b[39m,\n",
+      "  `Skewness of the integrated profile` = \u001b[32mcol_double()\u001b[39m,\n",
+      "  `Mean of the DM-SNR curve` = \u001b[32mcol_double()\u001b[39m,\n",
+      "  `Standard deviation of the DM-SNR curve` = \u001b[32mcol_double()\u001b[39m,\n",
+      "  `Excess kurtosis of the DM-SNR curve` = \u001b[32mcol_double()\u001b[39m,\n",
+      "  `Skewness of the DM-SNR curve` = \u001b[32mcol_double()\u001b[39m,\n",
+      "  Class = \u001b[32mcol_double()\u001b[39m\n",
+      ")\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pulsar_data <- read_csv(\"https://raw.githubusercontent.com/glenren/dsci_100_group_24/main/HTRU_2.csv\", col_names = c(\"Mean of the integrated profile\", \n",
+    "    \"Standard deviation of the integrated profile\",\n",
+    "    \"Excess kurtosis of the integrated profile\",\n",
+    "    \"Skewness of the integrated profile\",\n",
+    "    \"Mean of the DM-SNR curve\",\n",
+    "    \"Standard deviation of the DM-SNR curve\",\n",
+    "    \"Excess kurtosis of the DM-SNR curve\",\n",
+    "    \"Skewness of the DM-SNR curve\",\n",
+    "    \"Class\") ) %>%\n",
+    "    mutate(Class = as_factor(Class))\n",
+    "\n",
+    "colnames(pulsar_data) <- make.names(colnames(pulsar_data))\n",
+    "\n",
+    "\n",
+    "pulsar_split <- initial_split(pulsar_data, prop = 0.75, strata = Class)  \n",
+    "pulsar_train <- training(pulsar_split)   \n",
+    "pulsar_test <- testing(pulsar_split)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.0.0"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
