--- a/Pulsar_Analysis.ipynb
+++ b/Pulsar_Analysis.ipynb
@@ -2,9 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.0.2”\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘broom’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dials’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘infer’ was built under R version 4.0.3”\n",
+      "Warning message:\n",
+      "“package ‘modeldata’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘parsnip’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘recipes’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tune’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘workflows’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘yardstick’ was built under R version 4.0.2”\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(repr)\n",
@@ -23,39 +85,177 @@
      "text": [
       "Parsed with column specification:\n",
       "cols(\n",
-      "  `Mean of the integrated profile` = \u001b[32mcol_double()\u001b[39m,\n",
-      "  `Standard deviation of the integrated profile` = \u001b[32mcol_double()\u001b[39m,\n",
-      "  `Excess kurtosis of the integrated profile` = \u001b[32mcol_double()\u001b[39m,\n",
-      "  `Skewness of the integrated profile` = \u001b[32mcol_double()\u001b[39m,\n",
-      "  `Mean of the DM-SNR curve` = \u001b[32mcol_double()\u001b[39m,\n",
-      "  `Standard deviation of the DM-SNR curve` = \u001b[32mcol_double()\u001b[39m,\n",
-      "  `Excess kurtosis of the DM-SNR curve` = \u001b[32mcol_double()\u001b[39m,\n",
-      "  `Skewness of the DM-SNR curve` = \u001b[32mcol_double()\u001b[39m,\n",
-      "  Class = \u001b[32mcol_double()\u001b[39m\n",
+      "  mean_int_prof = \u001b[32mcol_double()\u001b[39m,\n",
+      "  sd_int_prof = \u001b[32mcol_double()\u001b[39m,\n",
+      "  kurt_int_prof = \u001b[32mcol_double()\u001b[39m,\n",
+      "  skew_int_prof = \u001b[32mcol_double()\u001b[39m,\n",
+      "  mean_curve = \u001b[32mcol_double()\u001b[39m,\n",
+      "  sd_curve = \u001b[32mcol_double()\u001b[39m,\n",
+      "  kurt_curve = \u001b[32mcol_double()\u001b[39m,\n",
+      "  skew_curve = \u001b[32mcol_double()\u001b[39m,\n",
+      "  class = \u001b[32mcol_double()\u001b[39m\n",
       ")\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Data Recipe\n",
+       "\n",
+       "Inputs:\n",
+       "\n",
+       "      role #variables\n",
+       "   outcome          1\n",
+       " predictor          3\n",
+       "\n",
+       "Operations:\n",
+       "\n",
+       "Scaling for all_predictors()\n",
+       "Centering for all_predictors()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 14 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>neighbors</th><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 2</td><td>accuracy</td><td>binary</td><td>0.9559744</td><td>5</td><td>0.0028833370</td><td>Model1</td></tr>\n",
+       "\t<tr><td> 2</td><td>roc_auc </td><td>binary</td><td>0.9037479</td><td>5</td><td>0.0052654172</td><td>Model1</td></tr>\n",
+       "\t<tr><td> 4</td><td>accuracy</td><td>binary</td><td>0.9678187</td><td>5</td><td>0.0009765902</td><td>Model2</td></tr>\n",
+       "\t<tr><td> 4</td><td>roc_auc </td><td>binary</td><td>0.9262452</td><td>5</td><td>0.0044930236</td><td>Model2</td></tr>\n",
+       "\t<tr><td> 6</td><td>accuracy</td><td>binary</td><td>0.9694576</td><td>5</td><td>0.0008899309</td><td>Model3</td></tr>\n",
+       "\t<tr><td> 6</td><td>roc_auc </td><td>binary</td><td>0.9302502</td><td>5</td><td>0.0044895231</td><td>Model3</td></tr>\n",
+       "\t<tr><td> 8</td><td>accuracy</td><td>binary</td><td>0.9701281</td><td>5</td><td>0.0007577509</td><td>Model4</td></tr>\n",
+       "\t<tr><td> 8</td><td>roc_auc </td><td>binary</td><td>0.9346150</td><td>5</td><td>0.0038778868</td><td>Model4</td></tr>\n",
+       "\t<tr><td>10</td><td>accuracy</td><td>binary</td><td>0.9710221</td><td>5</td><td>0.0009299759</td><td>Model5</td></tr>\n",
+       "\t<tr><td>10</td><td>roc_auc </td><td>binary</td><td>0.9383166</td><td>5</td><td>0.0032799507</td><td>Model5</td></tr>\n",
+       "\t<tr><td>12</td><td>accuracy</td><td>binary</td><td>0.9710965</td><td>5</td><td>0.0009826473</td><td>Model6</td></tr>\n",
+       "\t<tr><td>12</td><td>roc_auc </td><td>binary</td><td>0.9404375</td><td>5</td><td>0.0027086842</td><td>Model6</td></tr>\n",
+       "\t<tr><td>15</td><td>accuracy</td><td>binary</td><td>0.9715435</td><td>5</td><td>0.0004188385</td><td>Model7</td></tr>\n",
+       "\t<tr><td>15</td><td>roc_auc </td><td>binary</td><td>0.9442635</td><td>5</td><td>0.0021121796</td><td>Model7</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 14 × 7\n",
+       "\\begin{tabular}{lllllll}\n",
+       " neighbors & .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <int> & <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t  2 & accuracy & binary & 0.9559744 & 5 & 0.0028833370 & Model1\\\\\n",
+       "\t  2 & roc\\_auc  & binary & 0.9037479 & 5 & 0.0052654172 & Model1\\\\\n",
+       "\t  4 & accuracy & binary & 0.9678187 & 5 & 0.0009765902 & Model2\\\\\n",
+       "\t  4 & roc\\_auc  & binary & 0.9262452 & 5 & 0.0044930236 & Model2\\\\\n",
+       "\t  6 & accuracy & binary & 0.9694576 & 5 & 0.0008899309 & Model3\\\\\n",
+       "\t  6 & roc\\_auc  & binary & 0.9302502 & 5 & 0.0044895231 & Model3\\\\\n",
+       "\t  8 & accuracy & binary & 0.9701281 & 5 & 0.0007577509 & Model4\\\\\n",
+       "\t  8 & roc\\_auc  & binary & 0.9346150 & 5 & 0.0038778868 & Model4\\\\\n",
+       "\t 10 & accuracy & binary & 0.9710221 & 5 & 0.0009299759 & Model5\\\\\n",
+       "\t 10 & roc\\_auc  & binary & 0.9383166 & 5 & 0.0032799507 & Model5\\\\\n",
+       "\t 12 & accuracy & binary & 0.9710965 & 5 & 0.0009826473 & Model6\\\\\n",
+       "\t 12 & roc\\_auc  & binary & 0.9404375 & 5 & 0.0027086842 & Model6\\\\\n",
+       "\t 15 & accuracy & binary & 0.9715435 & 5 & 0.0004188385 & Model7\\\\\n",
+       "\t 15 & roc\\_auc  & binary & 0.9442635 & 5 & 0.0021121796 & Model7\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 14 × 7\n",
+       "\n",
+       "| neighbors &lt;int&gt; | .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "|  2 | accuracy | binary | 0.9559744 | 5 | 0.0028833370 | Model1 |\n",
+       "|  2 | roc_auc  | binary | 0.9037479 | 5 | 0.0052654172 | Model1 |\n",
+       "|  4 | accuracy | binary | 0.9678187 | 5 | 0.0009765902 | Model2 |\n",
+       "|  4 | roc_auc  | binary | 0.9262452 | 5 | 0.0044930236 | Model2 |\n",
+       "|  6 | accuracy | binary | 0.9694576 | 5 | 0.0008899309 | Model3 |\n",
+       "|  6 | roc_auc  | binary | 0.9302502 | 5 | 0.0044895231 | Model3 |\n",
+       "|  8 | accuracy | binary | 0.9701281 | 5 | 0.0007577509 | Model4 |\n",
+       "|  8 | roc_auc  | binary | 0.9346150 | 5 | 0.0038778868 | Model4 |\n",
+       "| 10 | accuracy | binary | 0.9710221 | 5 | 0.0009299759 | Model5 |\n",
+       "| 10 | roc_auc  | binary | 0.9383166 | 5 | 0.0032799507 | Model5 |\n",
+       "| 12 | accuracy | binary | 0.9710965 | 5 | 0.0009826473 | Model6 |\n",
+       "| 12 | roc_auc  | binary | 0.9404375 | 5 | 0.0027086842 | Model6 |\n",
+       "| 15 | accuracy | binary | 0.9715435 | 5 | 0.0004188385 | Model7 |\n",
+       "| 15 | roc_auc  | binary | 0.9442635 | 5 | 0.0021121796 | Model7 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   neighbors .metric  .estimator mean      n std_err      .config\n",
+       "1   2        accuracy binary     0.9559744 5 0.0028833370 Model1 \n",
+       "2   2        roc_auc  binary     0.9037479 5 0.0052654172 Model1 \n",
+       "3   4        accuracy binary     0.9678187 5 0.0009765902 Model2 \n",
+       "4   4        roc_auc  binary     0.9262452 5 0.0044930236 Model2 \n",
+       "5   6        accuracy binary     0.9694576 5 0.0008899309 Model3 \n",
+       "6   6        roc_auc  binary     0.9302502 5 0.0044895231 Model3 \n",
+       "7   8        accuracy binary     0.9701281 5 0.0007577509 Model4 \n",
+       "8   8        roc_auc  binary     0.9346150 5 0.0038778868 Model4 \n",
+       "9  10        accuracy binary     0.9710221 5 0.0009299759 Model5 \n",
+       "10 10        roc_auc  binary     0.9383166 5 0.0032799507 Model5 \n",
+       "11 12        accuracy binary     0.9710965 5 0.0009826473 Model6 \n",
+       "12 12        roc_auc  binary     0.9404375 5 0.0027086842 Model6 \n",
+       "13 15        accuracy binary     0.9715435 5 0.0004188385 Model7 \n",
+       "14 15        roc_auc  binary     0.9442635 5 0.0021121796 Model7 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "pulsar_data <- read_csv(\"https://raw.githubusercontent.com/glenren/dsci_100_group_24/main/HTRU_2.csv\", col_names = c(\"Mean of the integrated profile\", \n",
-    "    \"Standard deviation of the integrated profile\",\n",
-    "    \"Excess kurtosis of the integrated profile\",\n",
-    "    \"Skewness of the integrated profile\",\n",
-    "    \"Mean of the DM-SNR curve\",\n",
-    "    \"Standard deviation of the DM-SNR curve\",\n",
-    "    \"Excess kurtosis of the DM-SNR curve\",\n",
-    "    \"Skewness of the DM-SNR curve\",\n",
-    "    \"Class\") ) %>%\n",
-    "    mutate(Class = as_factor(Class))\n",
+    "pulsar_data <- read_csv(\"https://raw.githubusercontent.com/glenren/dsci_100_group_24/main/HTRU_2.csv\", \n",
+    "                        col_names = c(\"mean_int_prof\", \n",
+    "                                      \"sd_int_prof\",\n",
+    "                                      \"kurt_int_prof\",\n",
+    "                                      \"skew_int_prof\",\n",
+    "                                      \"mean_curve\",\n",
+    "                                      \"sd_curve\",\n",
+    "                                      \"kurt_curve\",\n",
+    "                                      \"skew_curve\",\n",
+    "                                      \"class\") ) %>%\n",
+    "                        mutate(class = as_factor(class))\n",
     "\n",
-    "colnames(pulsar_data) <- make.names(colnames(pulsar_data))\n",
-    "\n",
-    "\n",
-    "pulsar_split <- initial_split(pulsar_data, prop = 0.75, strata = Class)  \n",
+    "pulsar_split <- initial_split(pulsar_data, prop = 0.75, strata = class)  \n",
     "pulsar_train <- training(pulsar_split)   \n",
-    "pulsar_test <- testing(pulsar_split)"
+    "pulsar_test <- testing(pulsar_split)\n",
+    "\n",
+    "set.seed(1234)\n",
+    "\n",
+    "pulsar_recipe <- recipe(class ~ mean_int_prof + mean_curve + skew_curve,\n",
+    "                       data = pulsar_train) %>%\n",
+    "    step_scale(all_predictors()) %>%\n",
+    "    step_center(all_predictors())\n",
+    "pulsar_recipe\n",
+    "\n",
+    "pulsar_vfold <- vfold_cv(pulsar_train, v = 5, strata = class)\n",
+    "\n",
+    "knn_tune <- nearest_neighbor(weight_func = 'rectangular', neighbors = tune()) %>%\n",
+    "    set_engine('kknn') %>%\n",
+    "    set_mode('classification')\n",
+    "\n",
+    "knn_results <- workflow() %>%\n",
+    "    add_recipe(pulsar_recipe) %>%\n",
+    "    add_model(knn_tune) %>%\n",
+    "    tune_grid(resamples = pulsar_vfold, grid = 10) %>%\n",
+    "    collect_metrics\n",
+    "knn_results\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
