Added some description to code

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -114,6 +114,8 @@
     "library(repr)\n",
     "library(readxl)\n",
     "library(tidymodels)\n",
+    "\n",
+    "# in order to underfit our data, we load a new library with the tools to do so, called caret\n",
     "library(caret)\n",
     "\n",
     "set.seed(2022)\n",
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +180,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "set.seed(2022) \n",
+    "\n",
+    "# in order to address the skew in our data, we will use an overfitted or underfitted data set to perform our data analysis\n",
+    "# we will perform exploratory data analyses on overfitted and underfitted data sets in order to determine which one has the highest accuracy\n",
+    "\n",
+    "pulsar <- which(pulsar_data$class==\"1\") # making a list of all the entries with Class = 1 (a.k.a. true pulsars)\n",
+    "false <- which(pulsar_data$class==\"0\")# making a list of all the entries with Class = 0 (a.k.a. false pulsar candidates)\n",
+    "length(pulsar)\n",
+    "length(false)\n",
+    "# here we can see how many observations of each category we have"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we have 1639 true pulsars, and 16259 false candidates, we can see that our two classes are heavily imbalanced. We can solve this by refitting our data, either by 1. underfitting, which is to reduce the majority class to the size of the minority class, or 2. overfitting, which is to increased the minority class to the size of the majority class. Of course, there are drawbacks to both methods: underfitting leads to loss of information from the minority class, and the duplication of the minority class in overfitting can lead to our classifier seeming more accurate than it really is."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -198,27 +226,29 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tibble [3,278 × 9] (S3: tbl_df/tbl/data.frame)\n",
-      " $ mean_int_prof: num [1:3278] 104 104 93 126 123 ...\n",
-      " $ sd_int_prof  : num [1:3278] 49.7 45.8 35.6 42.7 47 ...\n",
-      " $ kurt_int_prof: num [1:3278] 0.0926 0.377 0.5585 0.0885 0.1381 ...\n",
-      " $ skew_int_prof: num [1:3278] -0.337 0.495 2.745 0.346 0.24 ...\n",
-      " $ mean_curve   : num [1:3278] 2.46 4.3 2.6 1.63 1.25 ...\n",
-      " $ sd_curve     : num [1:3278] 13.7 23.5 14.2 14.6 11.9 ...\n",
-      " $ kurt_curve   : num [1:3278] 9.03 7.01 9.37 10.41 13.78 ...\n",
-      " $ skew_curve   : num [1:3278] 118.3 54.2 123 125.2 232.2 ...\n",
-      " $ class        : Factor w/ 2 levels \"0\",\"1\": 1 1 1 1 1 1 1 1 1 1 ...\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\n",
-       "   0    1 \n",
-       "1639 1639 "
+       " mean_int_prof      sd_int_prof    kurt_int_prof     skew_int_prof     \n",
+       " Min.   :  5.812   Min.   :24.77   Min.   :-1.8760   Min.   :-1.59365  \n",
+       " 1st Qu.: 54.268   1st Qu.:36.51   1st Qu.: 0.1870   1st Qu.: 0.09644  \n",
+       " Median : 95.371   Median :43.25   Median : 0.6373   Median : 1.32986  \n",
+       " Mean   : 86.501   Mean   :42.97   Mean   : 1.6744   Mean   : 7.98329  \n",
+       " 3rd Qu.:117.646   3rd Qu.:48.94   3rd Qu.: 2.9646   3rd Qu.:11.62334  \n",
+       " Max.   :192.617   Max.   :83.80   Max.   : 8.0695   Max.   :68.10162  \n",
+       "   mean_curve          sd_curve        kurt_curve       skew_curve      \n",
+       " Min.   :  0.2132   Min.   :  7.37   Min.   :-2.812   Min.   :  -1.949  \n",
+       " 1st Qu.:  2.4640   1st Qu.: 16.98   1st Qu.: 1.640   1st Qu.:   1.636  \n",
+       " Median :  6.8240   Median : 32.49   Median : 5.184   Median :  27.389  \n",
+       " Mean   : 29.4187   Mean   : 40.00   Mean   : 5.799   Mean   :  65.768  \n",
+       " 3rd Qu.: 39.8999   3rd Qu.: 62.52   3rd Qu.: 9.067   3rd Qu.:  97.115  \n",
+       " Max.   :199.5778   Max.   :109.66   Max.   :34.540   Max.   :1191.001  \n",
+       " class   \n",
+       " 0:1639  \n",
+       " 1:1639  \n",
+       "         \n",
+       "         \n",
+       "         \n",
+       "         "
       ]
      },
      "metadata": {},
@@ -247,53 +277,34 @@
      "output_type": "stream",
      "text": [
       "tibble [32,518 × 9] (S3: tbl_df/tbl/data.frame)\n",
-      " $ mean_int_prof: num [1:32518] 42.8 63.9 63.6 27.5 58.1 ...\n",
-      " $ sd_int_prof  : num [1:32518] 41 35.4 33.5 24.8 39.4 ...\n",
-      " $ kurt_int_prof: num [1:32518] 2.33 2.68 2.5 6.76 2.4 ...\n",
-      " $ skew_int_prof: num [1:32518] 5.96 11.04 11.8 55.97 7.93 ...\n",
-      " $ mean_curve   : num [1:32518] 74.1 60.8 16.3 74.4 30.6 ...\n",
-      " $ sd_curve     : num [1:32518] 93 74.2 52.6 77.1 61 ...\n",
-      " $ kurt_curve   : num [1:32518] 0.722 0.878 3.255 0.864 1.904 ...\n",
-      " $ skew_curve   : num [1:32518] -1.201 -0.432 9.285 -0.424 2.446 ...\n",
+      " $ mean_int_prof: num [1:32518] 9.48 68.6 83.86 53.27 76.97 ...\n",
+      " $ sd_int_prof  : num [1:32518] 36.1 33.7 56.5 32.4 41.4 ...\n",
+      " $ kurt_int_prof: num [1:32518] 5.54 2.14 1.52 3.77 2.11 ...\n",
+      " $ skew_int_prof: num [1:32518] 31.16 8.98 1.62 17.97 6.05 ...\n",
+      " $ mean_curve   : num [1:32518] 112.8 13.3 121.8 44.4 30 ...\n",
+      " $ sd_curve     : num [1:32518] 46.5 51.1 83 74.5 60.1 ...\n",
+      " $ kurt_curve   : num [1:32518] 0.816 3.639 -0.507 1.571 2.145 ...\n",
+      " $ skew_curve   : num [1:32518] 0.808 11.48 -1.42 1.119 3.705 ...\n",
       " $ class        : Factor w/ 2 levels \"0\",\"1\": 2 2 2 2 2 2 2 2 2 2 ...\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "    0     1 \n",
-       "16259 16259 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "set.seed(2022) \n",
-    "\n",
-    "# in order to address the skew in our data, we will use an overfitted or underfitted data set to perform our data analysis\n",
-    "# we will perform exploratory data analyses on overfitted and underfitted data sets in order to determine which one has the highest accuracy\n",
-    "\n",
-    "pulsar <- which(pulsar_data$class==\"1\") # list of all the entries with Class=1 (pulsar)\n",
-    "false <- which(pulsar_data$class==\"0\")# list of all the entries with Class=0 (not pulsar)\n",
-    "length(pulsar)\n",
-    "length(false)\n",
-    "\n",
     "# create an underfitted data set\n",
-    "down <- c(sample(false,length(pulsar)),pulsar) # \"Paste\" the indices\n",
-    "length(down)\n",
-    "pulsar_down <- pulsar_data[down,] # Create new dataframe with the indices in \"down\"\n",
-    "str(pulsar_down)\n",
-    "table(pulsar_down$class)\n",
+    "down <- c(sample(false,length(pulsar)),pulsar)\n",
+    "# here we are making a new vector combining the true pulsars and a new random sample of false candidates that has the same length as true pulsars\n",
+    "length(down) # the total amount of observations we have in the \"down\" vector, we can see\n",
+    "pulsar_down <- pulsar_data[down,] # create new pulsar_data dataframe including the indices in \"down\" (our underfitted data set)\n",
+    "summary(pulsar_down) # we can see a summary of our new underfitted data set\n",
+    "#looking at the class variable, we see we have an even\n",
     "\n",
     "# create an overfitted data set\n",
     "up <- c(sample(pulsar,length(false),replace=TRUE),false)\n",
-    "length(up)\n",
-    "pulsar_up <- pulsar_data[up,]\n",
-    "str(pulsar_up)\n",
-    "table(pulsar_up$class)"
+    "# here we are making a new vector combining the true pulsars and a new random sample of true candidates that has the same length as false candidates\n",
+    "# by having replace = TRUE, we allow the sample to create new variables of class 1 (true pulsars)\n",
+    "length(up) # the total amount of observations we have in \"up\" list\n",
+    "pulsar_up <- pulsar_data[up,] # Create new dataframe with including the indices in \"down\"\n",
+    "summary(pulsar_up)"
    ]
   },
   {
