summary and visualization related to exploritory data analysis

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -525,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The three variables with highest values from the percentage difference graph will then be used as our predictors for our data analysis. "
+    "The three variables with highest values (kurt_int_prof, mean_curve and skew_int_prof) from the percentage difference graph will then be used as our predictors for our data analysis. "
    ]
   },
   {
