added set seed for down sample cell

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -260,6 +260,8 @@
     }
    ],
    "source": [
+    "set.seed(2022)\n",
+    "\n",
     "# create an underfitted data set\n",
     "down <- c(sample(false,length(pulsar)),pulsar)\n",
     "# here we are making a new vector combining the true pulsars and a new random sample of false candidates that has the same length as true pulsars\n",
