--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -14,7 +14,7 @@
     "For this project, we will be using the HTRU2 dataset, with samples of pulsar candidates collected during the High Time Resolution Universe Survey, which “intends to be an all-sky survey for pulsars and short-duration radio transients, with a strong focus on the lower Galactic latitudes, [where the higher frequency resolution for the negation of interstellar dispersion are made used the most]” (Keith, https://academic.oup.com/mnras/article/409/2/619/1037409, page 620).\n",
     "Our objective is to classify the pulsar candidates as either real pulsars or false candidates caused by RFI and noise. A binary classification system will be used to represent whether the pulsar is real or not. With 16,259 false candidates and 1,639 real pulsars that are checked by humans, the real pulsars are a minority positive class, and false candidates are the majority negative class in this dataset. The class labels used are 0 (false candidate) and 1 (real pulsar). \n",
     "\n",
-    "In this dataset, two main attributes are used to distinguish between the posivtive and negative class. The first is the Integrated Pulse Profile of the pulsar candidate, which is \"an array of continuous variables that describe a longitude-resolved version of the signal that has been averaged in both time and frequency\" (Lyon et al. https://archive.ics.uci.edu/ml/datasets/HTRU2#, n.d.). The second attribute is the DM-SNR curve of the candidate, which is the curve that describes the relationship between the desnity of electrons between the observer and observed candidate\", known as the dispersion measure, and the candidate's signal to noise ratio.\n",
+    "In this dataset, two main attributes are used to distinguish between the posivtive and negative class. The first is the Integrated Pulse Profile of the pulsar candidate, which is \"an array of continuous variables that describe a longitude-resolved version of the signal that has been averaged in both time and frequency\" (Lyon et al. https://archive.ics.uci.edu/ml/datasets/HTRU2#, n.d.). The second attribute is the DM-SNR curve of the candidate, which is the curve that describes the relationship between the desnity of electrons between the observer and observed candidate\", known as the dispersion measure, and the candidate's signal to noise ratio\n",
     "(Lyon, 2016). For each of the two attributes of a candidate, the following four statistical features are taken, generating eight total variable columns for each candidate:\n",
     "- Mean\n",
     "- Standard Deviation\n",
@@ -923,6 +923,13 @@
     "If our classifier works accurately, then we have evidence that suggests a link between the variables we chose and pulsar status. The next question that arises would be how those variables relate to one another, beyond being individually considered?\n",
     "\n",
     "If our classifier doesn't work accurately, then further questions to consider would be what, then, is the best method for pulsar determination, and would it be possible at all to develop an accurate classifier? And specifically, would it be possible to do so within the dataset that we are working with?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Works Cited\n"
    ]
   }
  ],
