updated intro with variable explanation and predictive question

--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -8,11 +8,10 @@
     "###### By Bernie Leung, Phillip Li, Glen Ren, and Helena Tremblay\n",
     "\n",
     "### Introduction (Phillip)\n",
-    "Pulsars belong to a group of celestial objects called neutron stars, which are formed when suns collapse. When suns are sufficient of their hydrogen fuel, their creates pressure through constant nuclear reaction, which counteracts the external gravitational force and ultimately reaching hydrostatic equilibrium. As these massive stars run out of  hydrogen fuel, the core is no longer able to generate enough force to keep the celestial body from internally collapsing. The force from the collapse merges every proton and electron into a neutron. \n",
+    "Pulsars belong to a group of celestial objects called neutron stars, which are formed when suns collapse. When a sun is sufficient of its hydrogen fuel, it counteracts the external gravitational force by creating pressure through constant nuclear reaction, thus reaching hydrostatic equilibrium. As these massive stars run out of their hydrogen fuel, the core is no longer able to generate enough force to keep the celestial body from internally collapse. The force from the collapse merges every proton and electron within it into a neutron. \n",
     "\n",
-    "Since pulsars emit rhythmic pulses of strong radiation due to their electromagnetism dipoles, they look like they're twinkling when observed from Earth. \n",
+    "Due to pulsars' nature of emitting rhythmic pulses of strong radiation because of their electromagnetism dipoles, they release light in regular intervals and look like they are twinkling when observed from earth. \n",
     "For this project, we will be using the HTRU2 dataset, with samples of pulsar candidates collected during the High Time Resolution Universe Survey, which “intends to be an all-sky survey for pulsars and short-duration radio transients, with a strong focus on the lower Galactic latitudes, [where the higher frequency resolution for the negation of interstellar dispersion are made used the most]” (Keith, https://academic.oup.com/mnras/article/409/2/619/1037409, page 620).\n",
-    "Our objective is to classify the pulsar candidates as either real pulsars or false candidates caused by RFI and noise. A binary classification system will be used to represent whether the pulsar is real or not. With 16,259 false candidates and 1,639 real pulsars that are checked by humans, the real pulsars are a minority positive class, and false candidates are the majority negative class in this dataset. The class labels used are 0 (false candidate) and 1 (real pulsar). \n",
     "\n",
     "In this dataset, two main attributes are used to distinguish between the posivtive and negative class. The first is the Integrated Pulse Profile of the pulsar candidate, which is \"an array of continuous variables that describe a longitude-resolved version of the signal that has been averaged in both time and frequency\" (Lyon et al. https://archive.ics.uci.edu/ml/datasets/HTRU2#, n.d.). The second attribute is the DM-SNR curve of the candidate, which is the curve that describes the relationship between the desnity of electrons between the observer and observed candidate\", known as the dispersion measure, and the candidate's signal to noise ratio\n",
     "(Lyon, 2016). For each of the two attributes of a candidate, the following four statistical features are taken, generating eight total variable columns for each candidate:\n",
@@ -21,9 +20,9 @@
     "- Skewness\n",
     "- Excess Kurtosis\n",
     "\n",
-    "The predictive question of our analysis is the following: Given the above variables of an unknown pulsar candidate, determine whether it is a false candidate or a real pulsar.\n",
+    "Our predictive question is to classify the pulsar candidates as either real pulsars or false candidates caused by RFI and noise. A binary classification system will be used to represent whether the pulsar is real or not. With 16,259 false candidates and 1,639 real pulsars that are checked by humans, the real pulsars are a minority positive class, and false candidates are the majority negative class in this dataset. The class labels used are 0 (false candidate) and 1 (real pulsar).\n",
+    "The data itself is in two formats: CSV and ARFF. Each row corresponds to a candidate, each column a variable with the last column being the candidate's class. \n",
     "\n",
-    "The data itself is in two formats: CSV and ARFF. Each row corresponds to a candidate, each column a variable with the last column being the candidate's class. The variables included in the data set relate to the integral profile and the curve of the observation. \n",
     "\n",
     "### Methods & Results (Bernie & Glen)\n",
     "#### Load Data from Original Source on Web"
@@ -931,6 +930,13 @@
    "source": [
     "### Works Cited\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
